@@ -36,6 +36,11 @@
 # Default locale is American English.
 :locale: "en-US"
 
+# By default individual users can't pick their own locale and are presented
+# with the one set above. To enable language selection in User/Preferences set
+# the following option to true.
+:per_user_locale: false
+
 # User Signup.
 #------------------------------------------------------------------------------
 # The following setting controls user signup. Possible values are:
